fixed overflow.. again

--- a/public/assets/style.css/main.css
+++ b/public/assets/style.css/main.css
@@ -1,6 +1,6 @@
 /* global */
-#contact{
-  overflow-x: hidden;
+*{
+  overflow: hidden;
 }
 body{
   
